# jirs

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  idea_slides.md
backend/: Cargo.toml
backend/.sqlx/: query-0e762b36509a42a7cf10ae9e3a28026f258dd2a10d35513e4e070707880a27a1.json  query-103186f78dcc7e0aa62c5a32bb4643d69c7e9ee0e5fcdc2efbbe750153a07677.json  query-1410896da841f0662f7ba306adfb57522e2cb89fb0df4009d710cf272a5c34f6.json  query-1cfb296a473a7b7dc86e27246036c4c037da1223c341492c5dc825763e3ca4d6.json  query-20030eb098c9b603e1e8acd04e1f171b82e920dea9fe4bea16d305dd761e860f.json  query-235aa4db1a0ac54c02f05ecb741209453c222a0eaa105805751a7347d1052073.json  query-2474e49f685875a60c3e49d2224fa15483c05e78c5531dab8933465c389587cf.json  query-25bb0163f393027a98e9ec67b5b7cbe1a6a6b9738332807e4858410eca7080bd.json  query-27f28562645b69ca7559832e0711ce9bad719e0c03060890f75f1db8e9524446.json  query-32f8eec716fdc5e930972f2d01c8e38ffed3b69a095e9dd970e6f22dd9a593fd.json  query-346f6f48540df53a62b9710fe5186df1dc8f242c772ef2917c1883ad68a4acea.json  query-3d881030737844d9397b9d13b79cb5b369d8a3163971ec5fadc1f32beecde317.json  query-4a2b454563bcaa99a4dbd9e9f23a63fefd9b3d869883de2f865dd339f9d58bda.json  query-5431a84108b63fd8fd9d1bead43bbf3c92967723996cbdd39a4d2256d8fdb864.json  query-5e61cdd3254b47f47bdafba5c2a5accdc918545d95d78530c55c3c99d38b22ce.json  query-60dacf67d6f0f6d23b009ee4353b3fd0b03cfe7f2bc1eedfcad9989e802ef709.json  query-6273e0d2aa3f7db6ee6f07c03c8548b181bc6a3f3fa60f297a8d6a2cd45f70d2.json  (+37 more)
backend/migrations/: 001_users.sql  002_projects.sql  (+8 more)
(+61 files in other folders)
