[package]
name = "jirs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jirs"
path = "src/main.rs"

[lib]
name = "jirs"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-br", "set-status"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
validator = { version = "0.18", features = ["derive"] }
tower = "0.5"
http = "1"
axum-extra = { version = "0.9", features = ["cookie"] }
rand = "0.8"
regex = "1"

[dev-dependencies]
axum-test = "19"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
